@@ -1,3 +1,5 @@
+2006/1/31 -- released version 20060131_trunk
+
 2006/1/30 -- released version 20060130_trunk
 
 2006/1/29 -- released version 20060129_trunk
